updating config.json

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "defaultContentLanguage": "none",
     "disablePathToLower": true,
     "enableRobotsTXT": true,
-    "galleryChannelIds": "",
+    "galleryChannelIds": "114661406",
     "params": {
         "loginId": "1758166",
         "subfolder": "",
